# generate-insurance-data

./: .gitignore  CONFIG_GUIDE.md  PLAN.md  README.md  analisis_eda_cartera_completo.ipynb  analisis_eda_cartera_completo_v2.ipynb  config.py  main.py  pyproject.toml  requirements.txt  validaciones.py
generadores/: __init__.py  polizas.py  siniestros.py  vehiculos.py
