[project]
name = "generate-insurance-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=22.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "seaborn>=0.13",
]
